# serializer version: 1
# name: test_application_info
  dict({
    'version': <AwesomeVersion SemVer '1.9.4'>,
  })
# ---
# name: test_application_info.1
  dict({
    'version': '1.9.4',
  })
# ---
# name: test_preload_list[no stream preloaded]
  dict({
  })
# ---
# name: test_preload_list[one stream preloaded]
  dict({
    'camera.haus_eingang_fluent_2': dict({
      'query': 'video&audio',
    }),
  })
# ---
# name: test_schemes
  set({
    'exec',
    'ffmpeg',
    'rtsp',
    'rtsps',
    'rtspx',
    'webrtc',
  })
# ---
# name: test_streams_get[empty]
  dict({
  })
# ---
# name: test_streams_get[one stream]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
        dict({
          'url': 'rtsp://test:test@192.168.10.105:554/Preview_06_sub',
        }),
      ]),
    }),
  })
# ---
# name: test_streams_get[without producers]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
      ]),
    }),
  })
# ---
# name: test_webrtc_offer
  dict({
    'sdp': 'v=0...',
    'type': 'answer',
  })
# ---
